# 2-BinairoSolver

./: .gitignore  BinairoSolver.cabal  README.md
answers/: answer-exercise-2.txt  answer-exercise-3.txt  answer-exercise-4.txt  answer-exercise-5.txt  answer-exercise-6.txt  answer-exercise-7.txt  answer-exercise-8.txt  answer-exercise-9.txt  answer-exercise-template.txt
src/: Binairos.hs  Solver.hs  Utilities.hs
test/: Spec.hs
